@@ -1,27 +1,28 @@
 package com.example;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class Warehouse {
-    static Warehouse warehouse;
+    private static final Map<String, Warehouse> instances = new HashMap<>();
     List<Product> productList = new ArrayList<>();
 
+    private Warehouse(){};
+
     public List<Product> getProducts(){
-        return productList;
+        return productList.stream().toList();
     }
 
     public List<Shippable> shippableProducts(){
         return productList.stream()
-                .map(product -> (Shippable) product).toList();
+                .filter(product -> product instanceof Shippable)
+                .map(product -> (Shippable) product)
+                .collect(Collectors.toList());
     }
 
     public static Warehouse getInstance(String name){
-        return warehouse;
+        return instances.computeIfAbsent(name, k -> new Warehouse());
     }
 
     public static Warehouse getInstance(){
@@ -34,14 +35,50 @@ public class Warehouse {
     }
 
     public void addProduct(Product productName){
+        if (productName == null) {
+            throw new IllegalArgumentException("Product cannot be null.");
+        }
+        for (Product product: productList){
+            if (product.uuid() == (productName.uuid())){
+                throw new IllegalArgumentException("Product with that id already exists, use updateProduct for updates.");
+            }
+        }
+
+        instances.clear();
         productList.add(productName);
     }
 
     public void updateProductPrice(UUID uuid, BigDecimal newPrice){
-//        if (!productList.contains(uuid)){
-//            throw new NoSuchElementException("Product not found with id: ");
-//        }
+        Product product = productList.stream()
+                .filter(p -> p.uuid().equals(uuid))
+                .findFirst()
+                .orElseThrow(() -> new NoSuchElementException("Product not found with id:"));
+
+        // Update price
+        product.price(newPrice); // assuming Product has a setter price(BigDecimal)
 
     }
 
+    public Optional<Product> getProductById(UUID id){
+        return productList.stream().filter(product -> product.uuid().equals(id)).findFirst();
+    }
+
+    public Map<Category, List<Product>> getProductsGroupedByCategories(){
+        return productList.stream()
+                .collect(Collectors.groupingBy(Product::category, LinkedHashMap::new, Collectors.toList()));
+    }
+
+    public void remove(UUID uuid){
+        productList.removeIf(product -> product.uuid().equals(uuid));
+    }
+
+    public List<Perishable> expiredProducts(){
+        return productList.stream()
+                .filter(product -> product instanceof Perishable).map(product -> (Perishable) product)
+                .filter(Perishable::isExpired)
+                .collect(Collectors.toList());
+    }
+
+    public void clearProducts() {
+    }
 }
